# oxidrop

./: .env.example  .gitignore  Cargo.toml  LICENCE  README.md  diagnose_mdns.sh  setup.sh
.cargo/: config.toml
src/: config.rs  dns.rs  main.rs
src/server/: mod.rs  webdav.rs
src/storage/: mod.rs
