[package]
name = "oxidrop"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
dav-server = "0.6"

# The glue that connects the WebDAV engine to your Axum router
tower = "0.4"
tower-http = { version = "0.5", features = ["auth"] }

# Required for handling HTTP headers and metadata safely in Rust
headers = "0.4"

